--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,12 +1,13 @@
-worker_processes  1;
+worker_processes 1;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
+
 http {
-    include      mime.types;
-    sendfile        on;
-    keepalive_timeout  65;
+    include mime.types;
+    sendfile on;
+    keepalive_timeout 65;
 
     server {
         listen LISTEN_PORT default_server;
@@ -31,7 +32,7 @@ http {
         access_log /dev/stdout;
         error_log /dev/stderr;
         sendfile off;
-        client_max_body_size 2G;
+        client_max_body_size 32M;
 
         location ~ \.php$ {
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -53,7 +54,6 @@ http {
         }
 
     }
-    #include /etc/nginx/sites-enabled/*;
 }
 
 daemon off;
