--- a/src/composer.json
+++ b/src/composer.json
@@ -17,7 +17,8 @@
         "laravel/framework": "^11.1",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "league/glide-symfony": "^2.0"
+        "league/glide-symfony": "^2.0",
+        "predis/predis": "^3.0"
     },
     "require-dev": {
         "larastan/larastan": "^2.8",
