--- a/src/package.json
+++ b/src/package.json
@@ -27,5 +27,9 @@
         "uuid": "^8.3.2",
         "vite": "^5.2.7",
         "vue": "^3.2.27"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "chart.js": "^4.4.9"
     }
 }
